--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,54 @@
-/*  your css code here. If applicable */
+body{
+	background-color: #f5f5f5;
+}
+.header{
+	background-color: #011e29;
+	color: white;
+	text-align: center;
+	padding: 15px;
+}
+#container{
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+}
+.latest-news-section{
+	width: 25%;
+	background-color: white;
+	padding: 15px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	align-self: flex-start;
+	border-radius: 10px;
+
+	li{
+		padding-left: 18px;
+	}
+}
+.main-article-section{
+	width: 25%;
+	background-color: white;
+	padding: 15px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	align-self: flex-start;
+	border-radius: 10px;
+}
+.pictorial-news-section{
+	width: 25%;
+	background-color: white;
+	padding: 15px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	gap: 8px;
+	border-radius: 10px;
+
+	img{
+		width: 80%;
+		object-fit: cover;
+	}
+}
